Format Java code
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.format.AutoFormat?organizationId=NTUzZjRhN2UtYjAxNC00YzU2LWJlMWUtZjI1MzBmOWUzZmFm

Co-authored-by: Moderne <team@moderne.io>